# aimdl_coordinate_systems

./: .gitignore  LICENSE  README.md  coordinate_transform_example.ipynb  coordinate_transformer.py  example_nmd.ipynb  instrument_coordinate_transforms.yaml  pyproject.toml  test_coordinate_transformer.py
.circleci/: config.yml
.github/workflows/: publish_pypi.yml
nmdchecks/: TEST11_000000000000000000000011_0_758.NMPROJ  example_nmd.ipynb
src/coordinate_transformer/: __init__.py  __main__.py
tests/: test_coordinate_transformer.py  test_versioned_transforms.py
