[project]
name = "coordinate-transformer"
version = "0.1.0"
description = "Config-driven affine coordinate transforms for lab instruments"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
  "jupyter>=1.0",
  "ipykernel>=6.29",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["coordinate_transformer"]
