[project]
name = "coordinate-transformer"
version = "0.1.0"
description = "Config-driven affine coordinate transforms for lab instruments"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
notebook = [
  "jupyter>=1.0",
  "ipykernel>=6.29",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["coordinate_transformer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
